--- a/src/main/resources/templates/admin/editGround.html
+++ b/src/main/resources/templates/admin/editGround.html
@@ -231,7 +231,12 @@
             <label for="location"><i class="fas fa-map-marker-alt"></i> Location:</label>
             <input type="text" id="location" th:field="*{location}" required placeholder="Enter location">
         </div>
-
+        
+		<div class="form-group">
+            <label for="address"><i class="fas fa-map-marker-alt"></i> Location:</label>
+            <input type="text" id="address" th:field="*{address}" required placeholder="Enter location">
+        </div>
+        
         <div class="form-group">
             <label for="game"><i class="fas fa-gamepad"></i> Select Game:</label>
             <select id="game" name="gameId" required>
