--- a/src/main/resources/templates/admin/ground.html
+++ b/src/main/resources/templates/admin/ground.html
@@ -228,6 +228,11 @@
                 <label for="location"><i class="fas fa-map-marker-alt"></i>Location:</label>
                 <input type="text" id="location" th:field="*{location}" required placeholder="Enter location">
             </div>
+            
+            <div class="form-group">
+                <label for="address"><i class="fas fa-map-marker-alt"></i>Address:</label>
+                <input type="text" id="address" th:field="*{address}" required placeholder="Enter location">
+            </div>
 
             <div class="form-group">
                 <label for="game"><i class="fas fa-gamepad"></i>Select Game:</label>
